tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/cors/a/to_b/_test_context/VirtualService.3743758594.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - b
  http:
  - corsPolicy:
      allowCredentials: false
      allowHeaders:
      - X-Foo-Bar
      - X-Foo-Baz
      allowMethods:
      - POST
      - GET
      allowOrigins:
      - exact: cors.com
      maxAge: 24h
    route:
    - destination:
        host: b
